--- a/css-blog.html
+++ b/css-blog.html
@@ -17,7 +17,7 @@
 			</ul>
 		</nav>
 		<h2>Learning Cascading Style Sheet(CSS)</h1>
-		<h4> by Dinky Caorte</h4><br>
+		<h4> by Dinky Caorte</h4>
 	</header>
 	<article> 
 
