--- a/javascript-blog.html
+++ b/javascript-blog.html
@@ -19,7 +19,7 @@
 			</ul>
 		</nav>
 	
-		<h2>Learning Cascading Style Sheet(CSS)</h1>
+		<h2>Understanding Javascript</h1>
 		<h4> by Dinky Caorte</h4>
 	
 	</header>
